--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  background: #7e3de6;
+  background: -webkit-linear-gradient(160deg, #7e3de6 0%, #9b69eb 50%, #b793f1 100%);
+  background: linear-gradient(160deg, #7e3de6 0%, #9b69eb 50%, #b793f1 100%);
 }
